--- a/_posts/2024-07-02-biology.md
+++ b/_posts/2024-07-02-biology.md
@@ -7,8 +7,26 @@ date_updated: 2024/07/02
 published: false
 ---
 
-_or, a synthesis of my stint in biology_
+_or, a synthesis of my philosophy from my stint in biology_
+or, a personal tour of the cooler parts of biology
 
+I don't like bugs, I find animals cute but don't naturally understand them, don't like the wet slimy stuff typical of living things, squeamish about veggies gone rotten, worms, slugs, dead bodies, etc. I eat meat but I don't like the smell of raw meat. 
+
+And you call yourself a biologist?
+
+Kind of, but not really. 
+
+
+how/why do biological systems fail so weirdly?
+when i was young and ignorant and thought that going to medical school would help me understand this, i had to write tedious essays about my motivations (my family and friends are too healthy to have that kind of story)
+tay sachs vs multiple things gone wrong as seen in frailty
+acardia amorphus and self organization -- surprisingly still organized
+
+self organization and natural selection
+
+cancer chimera
+
+Howard Pattee's claim that “the way to get novelty is not to create something new but to constrain what was there before" has been one of the most weirdly compelling but baffling statements that I've come across. 
 
 #incomplete nature
 
@@ -26,16 +44,55 @@ I would've enjoyed reading this several years ago, when I first came across Howa
 
 ‘Being alive does not merely consist in being composed in a partiular way. It consists of changing in a particular way’ (175)
 maybe why i loved calculus
-
+'a stable system is a dead system'
 
 #aging
 
-## senescence
-
-## growing neural automata
-
-## metabolism first
+optimization and fitness landscapes
 
 ## what you see is what persists -- life
+the first cell never died. diversitfication in strategies
 
-## structuralism vs adaptationalism 
+## senescence
+evo devo -- why do we see it? error vs adaptation
+cancer chimera
+
+## growing neural automata
+aging, space of functions that satisfying constraints
+constraints vs specifics, evo devo
+
+waddington: aging is development
+
+dosage compensation
+
+## what persists? metabolism first
+genome after, senescence
+lorenzo
+
+fire does not innovate; limited propagation
+anticipatory systems, changing itself to adapt to environment
+
+dubious of evo foundational model, physical environment
+
+
+## structuralism vs adaptationalism
+the essence of something is what does not change across examples -- how to identify it
+
+varying phenotypes -- what changes? focus on genes, 
+
+aging -- what should stay the same, but does not?
+
+looking at what changes over time, correlation vs causation i.e. wrinkles
+
+senescence, and eliminating them
+
+why are they there in the first place? we know how to get rid of them, bodies know how to housekeep/take out the trash -- why don't they do it? 
+
+evolutionary programmed death, error, maladaptive/shorter term tradeoffs 
+
+expressivity vs nonsense tradeoff, hofstadter
+
+adaptation of individual, adaptation of populations
+
+
+
